[package]
name = "rknpu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.65.1"

[dev-dependencies]
image = "0.24.8"
ndarray = "0.15.6"

[dependencies]
ndarray = "0.15.6"
