[package]
name = "rknpu2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
image = "0.24.8"
imageproc = "0.23.0"
rusttype = "0.9.3"

[dependencies]
ndarray = "0.15.6"
rknpu2-sys = { path = "../rknpu2-sys" }
